--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 	<!-- <h3>Architecture overview</h3> -->
 	
 	<div class="image-container">
-	  <img src="IMG/Gen_img.png" alt="LDAI framework">
+	  <img src="IMG/gen.png" alt="LDAI framework">
 	</div>
 
 	<div class="image-container">
-	  <img src="IMG/Dis_img.png" alt="LDAI framework">
+	  <img src="IMG/dis.png" alt="LDAI framework">
 	</div>
 		
 	<p align="justify">In listening to the following examples, keep in mind that Generator does not aim to precisely replicate must not replicate the timbre of the target dysarthric speaker but imprint the dysarthric characteristics from it onto a healthy speaker who has a different vocal timbre.</p>
-        <h3>Very_low Intelligibility level </h3>
+        <h3>Very_low Intelligibility level (15%) Male patient M01</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
@@ -47,7 +47,7 @@
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
             </div>
         </div>
-        <h3>Low Intelligibility level</h3>
+        <h3>Low Intelligibility level (43%) Male patient M16</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
@@ -59,7 +59,7 @@
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
             </div>
         </div>
-		<h3>Mid Intelligiility level</h3>
+		<h3>Mid Intelligiility level (58%) Male patient M05</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
@@ -71,7 +71,19 @@
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
             </div>
         </div>
-		<h3>High Intelligibility level</h3>
+		<h3>High Intelligibility level(86%) Male patient M09</h3>
+		<div class='playlist'>
+		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+            </div>
+		    <div class='labeled-audio'><p class='text'>corrupted</p>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+            </div>
+		    <div class='labeled-audio'><p class='text'>restored</p>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+            </div>
+        </div>
+		<h3>low Intelligibility level(29%) Female patient F02</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
                 <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
@@ -121,7 +133,7 @@
 		<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2a4d53607659606dd1fe36a37d2bc0f91f8fbef2'></script>
 		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1111673/t/4"></script>
 		Author: <a href="mailto:c.aironi@staff.univpm.it">Gioele Manuguerra</a>
-		<a href="https://github.com/GIOMANU01/"><img src="IMG/gh_ico.png" alt="github" width="35" height="35" style="margin: 0 20px 0 20px;"</a>
+		<a href="https://github.com/GIOMANU01/"><img src="IMG/gh_ico.png" alt="github" width="35" height="35" style="margin: 0 20px 0 20px;"></a>
 		</p>
 	</footer>	
 		
