--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  <img src="IMG/dis.png" alt="LDAI framework">
 	</div>
 		
-	<p align="justify">In listening to the following examples, keep in mind that Generator does not aim to precisely replicate must not replicate the timbre of the target dysarthric speaker but imprint the dysarthric characteristics from it onto a healthy speaker who has a different vocal timbre.</p>
+	<p align="justify">In listening to the following examples, keep in mind that Generator does not aim to precisely replicate the timbre of the target dysarthric speaker, but to imprint dysarthric characteristics onto a healthy speaker with a different vocal timbre.</p>
         <h3>Very_low Intelligibility level (15%) Male patient M01</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
