--- a/index.html
+++ b/index.html
@@ -38,61 +38,61 @@
         <h3>Very_low Intelligibility level (15%) Male patient M01</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
             </div>
         </div>
         <h3>Low Intelligibility level (43%) Male patient M16</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>Mid Intelligiility level (58%) Male patient M05</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>High Intelligibility level(86%) Male patient M09</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>low Intelligibility level(29%) Female patient F02</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/mpeg'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
             </div>
         </div>
 		
@@ -106,7 +106,6 @@
 		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1111673/t/4"></script>
 		Author: <a href="mailto:c.aironi@staff.univpm.it">Gioele Manuguerra</a>
 		<a href="https://github.com/GIOMANU01/"><img src="IMG/gh_ico.png" alt="github" width="35" height="35" style="margin: 0 20px 0 20px;"></a>
-		</p>
 	</footer>	
 		
 </body>
