--- a/index.html
+++ b/index.html
@@ -37,62 +37,62 @@
 	<p align="justify">In listening to the following examples, keep in mind that Generator does not aim to precisely replicate the timbre of the target dysarthric speaker, but to imprint dysarthric characteristics onto a healthy speaker with a different vocal timbre.</p>
         <h3>Very_low Intelligibility level (15%) Male patient M01</h3>
 		<div class='playlist'>
-		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>healthy</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>dysarthric</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_dis.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>generated</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
         <h3>Low Intelligibility level (43%) Male patient M16</h3>
 		<div class='playlist'>
-		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>healthy</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M16_B1_C16_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>dysarthric<</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M16_B1_C16_dis.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>generated</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M16_B1_C16_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>Mid Intelligiility level (58%) Male patient M05</h3>
 		<div class='playlist'>
-		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>healthy</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>dysarthric</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_dis.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>generated</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>High Intelligibility level(86%) Male patient M09</h3>
 		<div class='playlist'>
-		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>healthy</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>dysarthric</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_dis.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>generated</p>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>low Intelligibility level(29%) Female patient F02</h3>
 		<div class='playlist'>
-		    <div class='labeled-audio'><p class='text'>clean (reference)</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_clean.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>healthy</p>
+                <audio preload='metadata' controls><source src='SAMPLES/F02_B1_UW52_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>corrupted</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_lossy.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>dysarthric</p>
+                <audio preload='metadata' controls><source src='SAMPLES/F02_B1_UW52_dis.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>restored</p>
-                <audio preload='metadata' controls><source src='SAMPLES/waveform81_restored.wav' type='audio/wav'></audio>
+		    <div class='labeled-audio'><p class='text'>generated</p>
+                <audio preload='metadata' controls><source src='SAMPLES/F02_B1_UW52_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		
