--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <h3>Very_low Intelligibility level (15%) Male patient M01</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>healthy</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_sano.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B3_UW57_sano.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>dysarthric</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_dis.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B3_UW57_dis.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>generated</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M01_B03_UW57_gen.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M01_B3_UW57_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
         <h3>Low Intelligibility level (43%) Male patient M16</h3>
@@ -62,25 +62,25 @@
 		<h3>Mid Intelligiility level (58%) Male patient M05</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>healthy</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_sano.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B1_C10_sano.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>dysarthric</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_dis.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B1_C10_dis.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>generated</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M05_B01_C10_gen.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M05_B1_C10_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>High Intelligibility level(86%) Male patient M09</h3>
 		<div class='playlist'>
 		    <div class='labeled-audio'><p class='text'>healthy</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_sano.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW6_sano.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>dysarthric</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_dis.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW6_dis.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>generated</p>
-                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW06_gen.wav' type='audio/wav'></audio>
+                <audio preload='metadata' controls><source src='SAMPLES/M09_B1_UW6_gen.wav' type='audio/wav'></audio>
             </div>
         </div>
 		<h3>low Intelligibility level(29%) Female patient F02</h3>
