--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		    <div class='labeled-audio'><p class='text'>healthy</p>
                 <audio preload='metadata' controls><source src='SAMPLES/M16_B1_C16_sano.wav' type='audio/wav'></audio>
             </div>
-		    <div class='labeled-audio'><p class='text'>dysarthric<</p>
+		    <div class='labeled-audio'><p class='text'>dysarthric</p>
                 <audio preload='metadata' controls><source src='SAMPLES/M16_B1_C16_dis.wav' type='audio/wav'></audio>
             </div>
 		    <div class='labeled-audio'><p class='text'>generated</p>
