--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Generation of dysarthic speech signals with Generative Adversarial Network (GAN)</title>
+    <title>Generation of dysarthric speech signals with Generative Adversarial Network (GAN)</title>
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
